Corrections using solution. Removed align-items and added padding: 8px to .header, added .right with .left selector with align-items: center and gap: 16px, added margin: 0 and padding: 0 to ul selector

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -13,8 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -25,24 +25,18 @@ body {
   height:  48px;
 }
 
-.left {
+.left, .right {
   display: flex;
-  margin-left: 8px;
+  align-items: center;
+  gap: 16px;
 }
 
-.right {
-  display: flex;
-  gap: 16px;
-  margin-right: 8px;
-}
 
 .logo {
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  display: flex;
-  align-items: center;
 
 }
 
@@ -63,5 +57,7 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  margin: 0;
+  padding: 0;
   gap: 16px;
 }
